--- a/menu/pasta_de_estilos/stylemenu.css
+++ b/menu/pasta_de_estilos/stylemenu.css
@@ -1,14 +1,12 @@
 .body {
-    margin: 0;
     font-family: 'Arial', sans-serif;
     background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    margin-top: 400px ;
+    display: table; /* Substitui display flex */
+    width: 100%; /* Ocupa toda a largura */
     height: 100vh;
+    overflow: hidden
 }
-
 .nav {
     background-color: #333;
     overflow: hidden;
