--- a/perfil/pasta_de_estilos/styleperfil.css
+++ b/perfil/pasta_de_estilos/styleperfil.css
@@ -13,10 +13,11 @@ body {
 
 .nav {
     flex-direction: column;
-    background-color: #343a40;
+    background-color: #000000;
     overflow: hidden;
     text-align: center;
     width: 100%;
+    height: 50px;
     position: fixed;
     top: 0;
     padding: 10px;
