--- a/perfil/pasta_de_estilos/styleperfil.css
+++ b/perfil/pasta_de_estilos/styleperfil.css
@@ -37,17 +37,29 @@ body {
     color: #fff;
 }
 
-.content {
+.content{
     text-align: center;
     margin-top: 40px;
+    min-width: 500px;
+    max-width: 700px;
     background-color: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.img-perfil{
+    margin-top: 20px;
+    width: 120px;
+    height: 120px;
+}
 .h {
-    margin-top: 20%;
+    margin-top: 20px;
+    text-align: center;
     font-size: 24px;
     color: #007bff;
 }
+@media screen and (max-width: 700px) {
+    .content{
+      min-width: 300px;
+    }
+  }
