--- a/relatorios/pasta_de_estilos/stylerelatorios.css
+++ b/relatorios/pasta_de_estilos/stylerelatorios.css
@@ -1,51 +1,68 @@
 .body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .nav {
-    display: flex;
-    /* Ativa Flexbox */
-    align-items: center;
-    /* Centraliza elementos verticalmente */
-    background-color: #000000;
-    overflow: hidden;
-    text-align: left;
-    width: 100%;
-    height: 60px;
-    /* Altura do contêiner */
-    position: absolute;
-    top: 0;
+  display: flex;
+  /* Ativa Flexbox */
+  align-items: center;
+  /* Centraliza elementos verticalmente */
+  background-color: #000000;
+  overflow: hidden;
+  text-align: left;
+  width: 100%;
+  height: 60px;
+  /* Altura do contêiner */
+  position: absolute;
+  top: 0;
 }
 
 .nav a {
-    display: inline-block;
-    color: white;
-    padding: 5px;
-    text-decoration: none;
-    transition: background-color 0.3s;
+  display: inline-block;
+  color: white;
+  padding: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
 }
 
 .nav a:hover {
-    background-color: #c82333;
+  background-color: #c82333;
 }
 
 .content {
-    text-align: center;
-    margin-top: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .hs {
-    color: #ffffff;
-    font-size: 20px;
+  color: #ffffff;
+  font-size: 20px;
 
-    margin-left: auto;
-    margin-right: auto;
-    /* Cor neutra */
+  margin-left: auto;
+  margin-right: auto;
+  /* Cor neutra */
+}
+.modal {
+  /* width: 100%; */
+  display: none;
+  /* visibility: hidden; */
+  /* opacity: 0; */
+  position: fixed;
+  width: 400px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  /* text-align: center; */
+  /* margin: auto; */
+}
+.button_modal {
+  float: right;
 }
