--- a/relatorios/pasta_de_estilos/style_criar_relatorio.css
+++ b/relatorios/pasta_de_estilos/style_criar_relatorio.css
@@ -207,3 +207,13 @@ h3 {
 .checkboxes label {
   display: block;
 }
+
+.input_open{
+  width: auto;
+  height: auto;
+  float:left;
+}
+formCriarRelatorio label{
+  width: 40px;
+  height: auto;
+}
